<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. Parrot Faurecia Automotive S.A.S. All rights reserved.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerEmail"
            android:layout_centerHorizontal="true"
            android:hint="@string/register_password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerPassword"
            android:layout_centerHorizontal="true"
            android:hint="@string/register_confirm"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="40sp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/buttonColor"
            android:text="@string/next"
            android:textColor="@color/textColor"
            android:textStyle="bold"/>
    </RelativeLayout>
</FrameLayout>